# mlab

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  MATLAB_PARITY_PLAN.md  MATLAB_PARITY_TODO.md  NOTICE  README.md  build-desktop.bat  build.bat  build.sh  deploy-vite.sh  deploy.bat  deploy.sh  desktop.bat  dev.bat  dev.sh  rebuild.sh  serve.sh  test.sh
backend/src/: MTreeWalker.cpp  MVM.cpp
backend/tests/: CMakeLists.txt  vm_benchmark.cpp
benchmarks/: CMakeLists.txt  bench_simd.bat  bench_simd.sh  binaryops_bench.cpp  compare_simd.py  conv_bench.cpp  dsp_bench.cpp  elementwise_bench.cpp  fft_bench.cpp  interp_bench.cpp  manipulation_bench.cpp  matmul_bench.cpp  reductions_bench.cpp  setops_bench.cpp  sort_bench.cpp
brand/: BRAND-GUIDE.md  numkit-brand-sheet-final.html
cmake/: NumkitOptions.cmake  mConfig.cmake.in  numkitConfig.cmake.in
core/src/: MAllocator.cpp  MAst.cpp  MCompiler.cpp  MDataBuffer.cpp  MDebugSession.cpp  MDebugWorkspace.cpp  MDebugger.cpp  MDims.cpp  MEngine.cpp  MEnvironment.cpp  MHeapObject.cpp  MLexer.cpp  MParser.cpp  MThreadPool.cpp  MTreeWalker.cpp  MType.cpp  MVM.cpp  MValue.cpp  MVfs.cpp  allocator.cpp  ast.cpp  compiler.cpp  data_buffer.cpp  debug_session.cpp  debug_workspace.cpp  debugger.cpp  dims.cpp  engine.cpp  environment.cpp  heap_object.cpp  lexer.cpp  parser.cpp  thread_pool.cpp  tree_walker.cpp  value.cpp  value_type.cpp  vfs.cpp  vm.cpp
core/tests/: CMakeLists.txt  command_syntax_test.cpp  lexer_test.cpp  parser_test.cpp  scratch_arena_test.cpp  shape_ops_test.cpp  thread_pool_test.cpp  tree_walker_test.cpp  vm_benchmark.cpp  vm_test.cpp
debug/src/: MDebugSession.cpp  MDebugWorkspace.cpp  MDebugger.cpp
docs/: index.html  mlab_repl.js  mlab_repl.wasm  numkit_mide.js  numkit_mide.wasm
docs/assets/: index-B_Qvwk9O.js  index-B_Qvwk9O.js.map  index-BkGAEqSR.js  index-BkGAEqSR.js.map  index-BveL5iEA.js  index-BveL5iEA.js.map  index-CoeRxaJs.js  index-CoeRxaJs.js.map  index-CyfTLNha.js  index-CyfTLNha.js.map  index-D3gy2UXp.css  index-DLnogJyq.css  index-DmKEaPPv.js  index-DmKEaPPv.js.map  index-DpYAAkpI.js  index-DpYAAkpI.js.map  index-f1G7YIBq.js  index-f1G7YIBq.js.map  index-l0eeYJx8.js  index-l0eeYJx8.js.map
docs/examples/: manifest.json
example/: main.cpp
frontend/src/: MAst.cpp  MCompiler.cpp  MLexer.cpp  MParser.cpp
frontend/tests/: CMakeLists.txt  lexer_test.cpp
ide/: CMakeLists.txt.example  README.md  index.html  package-lock.json  package.json  vite.config.js
ide/desktop/: main.js  package.json  (+2 more)
include/: MAllocator.hpp  MAst.hpp  MBranding.hpp  MBytecode.hpp  MCompiler.hpp  MDataBuffer.hpp  MDebugSession.hpp  MDebugWorkspace.hpp  MDebugger.hpp  MDims.hpp  MDspLibrary.hpp  MEngine.hpp  MEnvironment.hpp  MFigureManager.hpp  MFitLibrary.hpp  MHeapObject.hpp  MLabAst.hpp  MLabBranding.hpp  MLabBytecode.hpp  MLabCompiler.hpp  MLabDataBuffer.hpp  MLabDebugSession.hpp  MLabDebugWorkspace.hpp  MLabDebugger.hpp  MLabDims.hpp  MLabDspLibrary.hpp  MLabEngine.hpp  MLabEnvironment.hpp  MLabFigureManager.hpp  MLabFitLibrary.hpp  MLabHeapObject.hpp  MLabLexer.hpp  MLabParser.hpp  MLabPlotLibrary.hpp  MLabPltLibrary.hpp  MLabSignalHelpers.hpp  MLabSpan.hpp  MLabStdHelpers.hpp  MLabStdLibrary.hpp  MLabTreeWalker.hpp  (+16 more)
repl-vite/: CMakeLists.txt.example  index.html  package.json  vite.config.js
src/: MAllocator.cpp  MAst.cpp  MCompiler.cpp  MDataBuffer.cpp  MDebugSession.cpp  MDebugWorkspace.cpp  MDebugger.cpp  MDims.cpp  MEngine.cpp  MEnvironment.cpp  MHeapObject.cpp  MLabAst.cpp  MLabCompiler.cpp  MLabDataBuffer.cpp  MLabDebugSession.cpp  MLabDebugWorkspace.cpp  MLabDebugger.cpp  MLabDims.cpp  MLabEngine.cpp  MLabEnvironment.cpp  MLabHeapObject.cpp  MLabLexer.cpp  MLabMType.cpp  MLabParser.cpp  MLabStdLibrary.cpp  MLabTreeWalker.cpp  MLabVM.cpp  MLabValue.cpp  MLabVfs.cpp  MLexer.cpp  MMType.cpp  MParser.cpp  MTreeWalker.cpp  MType.cpp  MVM.cpp  MValue.cpp  MVfs.cpp  plotting_section.cpp
tests/: CMakeLists.txt  MLabEngine.cpp  command_style_test.cpp  convolution_test.cpp  dual_engine_fixture.hpp  engine_advanced_test.cpp  engine_test.cpp  filter_design_test.cpp  filter_test.cpp  interp_test.cpp  lexer_test.cpp  main.cpp  parser_test.cpp  resample_test.cpp  spectral_test.cpp  test_advanced.cpp  test_arithmetic.cpp  test_comments.cpp  test_controlflow.cpp  test_debugger_diagnostic.cpp  test_debugger_phase1.cpp  test_debugger_phase234.cpp  test_known_issues.cpp  test_matrices.cpp  test_variables.cpp  test_who_diagnostic.cpp  transform_test.cpp  tree_walker_test.cpp  vm_benchmark.cpp  vm_test.cpp
tests/backend/: tree_walker_test.cpp  vm_benchmark.cpp  vm_test.cpp
tests/compat/: matlab_parity_checks.m  probe.m
tests/core/: command_syntax_test.cpp  lexer_test.cpp  parser_test.cpp
tests/diagnostics/: compiler_assigned_vars_test.cpp  debug_session_test.cpp  debug_session_test_eval_inject.cpp  debugger_diagnostic_test.cpp  debugger_phase1_test.cpp  debugger_phase234_test.cpp  error_diagnostics_test.cpp  known_issues_test.cpp  matlab_parity_test.cpp  register_constant_test.cpp  who_diagnostic_test.cpp
tests/dsplib/: convolution_test.cpp  filter_design_test.cpp  filter_test.cpp  resample_test.cpp  signal_core_test.cpp  spectral_test.cpp  transform_test.cpp  windows_test.cpp
tests/fitlib/: interp_test.cpp
tests/integration/: compiler_assigned_vars_test.cpp  debug_session_test.cpp  debug_session_test_eval_inject.cpp  debugger_diagnostic_test.cpp  debugger_phase1_test.cpp  debugger_phase234_test.cpp  error_diagnostics_test.cpp  known_issues_test.cpp  matlab_parity_test.cpp  register_constant_test.cpp  who_diagnostic_test.cpp
tests/pltlib/: figure_test.cpp
tests/stdlib/: advanced_test.cpp  arithmetic_test.cpp  builtins_test.cpp  commands_test.cpp  comments_test.cpp  concat_test.cpp  controlflow_test.cpp  csv_test.cpp  dynvars_test.cpp  fileio_test.cpp  functions_test.cpp  indexing_test.cpp  integer_types_test.cpp  integration_test.cpp  matrix_test.cpp  programs_test.cpp  scope_test.cpp  types_test.cpp  vfs_test.cpp
tests/support/: dual_engine_fixture.hpp
wasm/: CMakeLists.txt
wasm/src/: repl_bindings.cpp
(+739 files in other folders)
